--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
 VUE_APP_KEY=AIzaSyA2UhIkQwd3bfcpnvd_qaFvnVDNSkTLcX0
+VUE_APP_FB_URL=https://testvueminin-default-rtdb.europe-west1.firebasedatabase.app
